cp: 	PR c++/196 	* cp/parse.y (bad_parm): Better diagnostic when given a SCOPE_REF. testsuite: 	* g++.dg/eh/ctor1.C: New test. 	* g++.dg/other/error2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48317 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-26  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/196
+	* cp/parse.y (bad_parm): Better diagnostic when given a SCOPE_REF.
+
 2001-12-24  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/160
