--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-27  Jakub Jelinek  <jakub@redhat.com>
+
+	* toplev.c (independent_decode_option): Re-add -aux-info option
+	handling.
+
 Thu Dec 27 09:50:44 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* integrate.c (copy_insn_notes): Don't adjust REG_EH_REGION note
