--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-27  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/debug-1.c, gcc.dg/debug-2.c: New.
+
 2001-12-26  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/eh/ctor1.C: New test.
