* config/h8300/h8300.md (two anonymous patterns): Remove.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48334 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-27  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md (two anonymous patterns): Remove.
+
 2001-12-27  Richard Henderson  <rth@redhat.com>
 
 	* haifa-sched.c (reemit_other_notes): New.
