--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -2104,21 +2104,8 @@
 ;;
 ;; Inverted loads with a 32bit destination.
 ;;
-;; Yes, all seven cases are needed.
+;; Yes, all five cases are needed.
 ;;
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=&r")
-	(and:SI (not:SI
-		  (zero_extend:SI (match_operand:HI 1 "register_operand" "r")))
-		(match_operand:SI 2 "p_operand" "P")))]
-  ""
-  "* return output_simode_bld (1, 1, operands);"
-  [(set_attr "cc" "clobber")
-   (set (attr "length")
-	(if_then_else (eq (symbol_ref "TARGET_H8300H || TARGET_H8300S")
-			  (const_int 0))
-		      (const_int 10)
-		      (const_int 8)))])
 (define_insn ""
   [(set (match_operand:SI 0 "register_operand" "=&r")
 	(and:SI (not:SI
@@ -2135,19 +2122,6 @@
 		      (const_int 10)
 		      (const_int 8)))])
 
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=&r")
-	(and:SI (not:SI
-		  (zero_extend:SI (match_operand:QI 1 "register_operand" "r")))
-		(match_operand:SI 2 "p_operand" "P")))]
-  ""
-  "* return output_simode_bld (1, 1, operands);"
-  [(set_attr "cc" "clobber")
-   (set (attr "length")
-	(if_then_else (eq (symbol_ref "TARGET_H8300H || TARGET_H8300S")
-			  (const_int 0))
-		      (const_int 10)
-		      (const_int 8)))])
 (define_insn ""
   [(set (match_operand:SI 0 "register_operand" "=&r")
 	(and:SI (not:SI
