--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-27  Roger Sayle <roger@eyesopen.com>
+
+	* builtins.c (expand_builtin_memcmp): Optimize memcmp built-in
+	when all arguments are known constant.  Fixes PR opt/3508.
+
 2001-12-27  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.md (two anonymous patterns): Remove.
