--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-27  Roger Sayle <roger@eyesopen.com>
+
+	* gcc.c-torture/execute/string-opt-16.c: New testcase.
+
 2001-12-27  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/debug-1.c, gcc.dg/debug-2.c: New.
