--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-28  Philipp Thomas  <pthomas@suse.de>
+
+	* cppfiles.c (stack_include_file): Don't translate <stdin>.
+
 2001-12-27  Roger Sayle <roger@eyesopen.com>
 
 	* builtins.c (expand_builtin_memcmp): Optimize memcmp built-in
