* combine.c (try_combine): Mask off sign bits when combining 	stores to the low and high parts of a two-word value.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48339 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2001-12-27  Geoff Keating  <geoffk@redhat.com>
 
+	* combine.c (try_combine): Mask off sign bits when combining
+	stores to the low and high parts of a two-word value.
+
 	* expr.c (expand_expr): Don't mark memory for non-constants as
 	constant.
 
