--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-28  Richard Henderson  <rth@redhat.com>
+
+	* real.c (etoe113, toe113): Ifndef INTEL_EXTENDED_IEEE_FORMAT.
+	(endian): Clear word 3 for INTEL_EXTENDED_IEEE_FORMAT.
+	(etartdouble): Invoke etoe64 for INTEL_EXTENDED_IEEE_FORMAT.
+	* real.h (REAL_VALUE_TO_TARGET_LONG_DOUBLE): Don't special case
+	INTEL_EXTENDED_IEEE_FORMAT.
+
 2001-12-27  Geoff Keating  <geoffk@redhat.com>
 
 	* combine.c (try_combine): Mask off sign bits when combining
