* c-typeck.c (store_init_value): If initializing object with array 	type of unknown size by a compound literal, set object's size from 	compound literal size. 	* doc/extend.texi (Compound Literals): Adjust documentation.
	* gcc.dg/gnu89-init-1.c: Adjust for the new behaviour, add some
	additional tests.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48343 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/extend.texi
+++ b/gcc/doc/extend.texi
@@ -1598,8 +1598,7 @@ It is handled as if the object was initialized only with the bracket
 enclosed list if compound literal's and object types match.
 The initializer list of the compound literal must be constant.
 If the object being initialized has array type of unknown size, the size is
-determined by compound literal's initializer list, not by the size of the
-compound literal.
+determined by compound literal size.
 
 @example
 static struct foo x = (struct foo) @{1, 'a', 'b'@};
@@ -1612,7 +1611,7 @@ The above lines are equivalent to the following:
 @example
 static struct foo x = @{1, 'a', 'b'@};
 static int y[] = @{1, 2, 3@};
-static int z[] = @{1@};
+static int z[] = @{1, 0, 0@};
 @end example
 
 @node Designated Inits
