--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-typeck.c (store_init_value): If initializing object with array
+	type of unknown size by a compound literal, set object's size from
+	compound literal size.
+	* doc/extend.texi (Compound Literals): Adjust documentation.
+
 2001-12-28  Richard Henderson  <rth@redhat.com>
 
 	* real.c (etoe113, toe113): Ifndef INTEL_EXTENDED_IEEE_FORMAT.
