--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-28  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.md: Fix formatting.
+
 2001-12-28  Geoff Keating  <geoffk@redhat.com>
 
 	* varasm.c (record_constant_1): Correct parameter to recursive
