* except.c: Fix comment formatting. 	* flags.h: Likewise. 	* flow.c: Likewise. 	* predict.c: Likewise. 	* simplify-rtx.c: Likewise. 	* system.h: Likewise. 	* vmsdbg.h: Likewise. 	* vmsdbgout.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48349 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,16 @@
 2001-12-28  Kazu Hirata  <kazu@hxi.com>
 
+	* except.c: Fix comment formatting.
+	* flags.h: Likewise.
+	* flow.c: Likewise.
+	* predict.c: Likewise.
+	* simplify-rtx.c: Likewise.
+	* system.h: Likewise.
+	* vmsdbg.h: Likewise.
+	* vmsdbgout.c: Likewise.
+
+2001-12-28  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md: Fix formatting.
 
 2001-12-28  Geoff Keating  <geoffk@redhat.com>
