* gen-table.pl: Const-ify output.  Document the location of a 	suitable unicode input file.
	* chartables.h: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48354 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gen-table.pl: Const-ify output.  Document the location of a
+	suitable unicode input file.
+
+	* chartables.h: Regenerate.
+
 2001-12-26  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* chartables.h: Const-ify.
