* objc/objc-act.c (build_module_descriptor): Make sure the init 	function is not deferred. 	(build_dispatch_table_initializer): Compute the method encoding if 	not already done.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48356 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-28  Stan Shebs  <shebs@apple.com>
+
+	* objc/objc-act.c (build_module_descriptor): Make sure the init
+	function is not deferred.
+	(build_dispatch_table_initializer): Compute the method encoding if
+	not already done.
+
 2001-12-28  Kazu Hirata  <kazu@hxi.com>
 
 	* doc/md.texi: Add @findex define_insn_and_split.
