--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-28  Stan Shebs  <shebs@apple.com>
+
+	* lib/objc-torture.exp: Resync with c-torture.exp.
+	* lib/objc.exp: Load standard libraries.
+
 2001-12-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/gnu89-init-1.c: Adjust for the new behaviour, add some
