--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-28  Tom Tromey  <tromey@redhat.com>
+
+	* gen-table.pl: Don't process characters after \uffff.  Added
+	comment pointing to input file.
+
 2001-12-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gen-table.pl: Const-ify output.  Document the location of a
