--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-29  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.c-torture/compile/20011229-1.c: New test.
+
 2001-12-28  Stan Shebs  <shebs@apple.com>
 
 	* lib/objc-torture.exp: Resync with c-torture.exp.
