--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/const1.C: New test.
+
 2001-12-29  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.c-torture/compile/20011229-1.c: New test.
