cp: 	PR c++/5125 	* pt.c (push_template_decl_real): Make sure DECL has 	DECL_LANG_SPECIFIC. testsuite: 	* g++.dg/template/crash1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48370 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/crash1.C: New test.
+
+2001-12-29  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.dg/other/const1.C: New test.
 
 2001-12-29  Hans-Peter Nilsson  <hp@bitrange.com>
