--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-29  Richard Henderson  <rth@redhat.com>
+
+	* g++.dg/eh/loop1.C: New.
+
 2001-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/crash1.C: New test.
