--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* cfglayout.c (insert_intra_before_1): New.
+	(insert_inter_bb_scope_notes): Emit sibling block notes which don't
+	span multiple basic blocks.
+
 2001-12-29  Richard Henderson  <rth@redhat.com>
 
 	* loop.c (prescan_loop): Set has_multiple_exit_targets for exception
