--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug-3.c: New test.
+	* gcc.dg/debug-4.c: New test.
+	* gcc.dg/debug-5.c: New test.
+
 2001-12-29  Richard Henderson  <rth@redhat.com>
 
 	* g++.dg/eh/loop1.C: New.
