--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 Sat Dec 29 15:48:54 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* expr.c (convert_move): If -fforce-mem, force FROM to not be memory.
+
 	* stor-layout.c (layout_decl): Don't misalign field of variable size
 	for packed record.
 
