--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,13 @@
 Sat Dec 29 15:48:54 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* expr.c (store_field): Use adjust_address, not PUT_MODE.
+	(expand_expr, case VIEW_CONVERT_EXPR): Likewise.
+	* reload1.c (eliminate_regs, case SUBREG): Likewise, but use
+	adjust_address_nv.
+	* varasm.c (make_decl_rtl): Likewise.
+	* integrate.c (copy_rtx_and_substitute, case MEM): Likewise, but use
+	replace_equiv_address_nv.
+
 	* varasm.c (decode_addr_const, case INTEGER_CST): Call
 	output_constant_def instead of looking at TREE_CST_RTL.
 
