* cfgrtl.c (try_redirect_by_replacing_jump): Allow redirect_jump 	to fail if target is EXIT_BLOCK_PTR, die otherwise. 	(redirect_edge_and_branch): Likewise. 	* cfgcleanup.c (try_forward_edge): Don't force jump redirecting 	if target is EXIT_BLOCK_PTR.
	* gcc.c-torture/compile/20011229-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48399 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* cfgrtl.c (try_redirect_by_replacing_jump): Allow redirect_jump
+	to fail if target is EXIT_BLOCK_PTR, die otherwise.
+	(redirect_edge_and_branch): Likewise.
+	* cfgcleanup.c (try_forward_edge): Don't force jump redirecting
+	if target is EXIT_BLOCK_PTR.
+
 2001-12-29  David Edelsohn  <edelsohn@gnu.org>
 
 	* gcc.c (init_gcc_spec): Do not link with static libgcc.a if
