--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20011229-2.c: New test.
+
 2001-12-29  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/debug-3.c: New test.
