* unroll.c: Move include files above first use of `const'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48400 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* unroll.c: Move include files above first use of `const'.
+
 2001-12-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* cfgrtl.c (try_redirect_by_replacing_jump): Allow redirect_jump
