--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-30  Richard Henderson  <rth@redhat.com>
 
+	* loop.c (check_dbra_loop): Fix last change: examine both
+	has_multiple_exit_targets and exit_count.
+
+2001-12-30  Richard Henderson  <rth@redhat.com>
+
 	* integrate.c (copy_rtx_and_substitute): Fix error last change:
 	we need to unconditionally create a new mem.
 
