* function.h: Remove undefs for rtx and tree.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48405 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-31  Graham Stott  <grahams@redhat.com>
+
+	* function.h: Remove undefs for rtx and tree.
+
 2001-12-30  Richard Henderson  <rth@redhat.com>
 
 	* loop.c (check_dbra_loop): Fix last change: examine both
