--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-31  Graham Stott  <grahams@redhat.com>
 
+	* final.c (struct bb_list): Delete.
+	(struct bb_str): Likewise.
+
+2001-12-31  Graham Stott  <grahams@redhat.com>
+
        * cfgloop.c (flow_loop_entry_edges_find): Fix typo.
         (flow_loop_exit_edges_find): Likewise.
 
