* c-typeck.c: Include rtl.h earlier.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48410 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-31  Graham Stott  <grahams@redhat.com>
 
+	* c-typeck.c:  Include rtl.h earlier.
+
+2001-12-31  Graham Stott  <grahams@redhat.com>
+
 	* tree.h (STRIP_NOPS): Remove extraneous semicolon.
 	(STRIP_SIGN_NOPS): Likewise.
 	(STRIP_TYPE_NOPS): Likewise.
