* c-lex.c: Include tree.h before expr.h
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,10 @@
 2001-12-31  Graham Stott  <grahams@redhat.com>
 
-	* c-typeck.c:  Include rtl.h earlier.
+	* c-lex.c: Include tree.h before expr.h
+
+2001-12-31  Graham Stott  <grahams@redhat.com>
+
+	* c-typeck.c: Include rtl.h earlier.
 
 2001-12-31  Graham Stott  <grahams@redhat.com>
 
