* toplev.h: Remove forward def of tree_node, rtx_def.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48417 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-31  Graham Stott  <grahams@redhat.com>
+
+        * toplev.h: Remove forward def of tree_node, rtx_def.
+
 2001-12-31 Graham Stott  <grahams@redhat.com>
 
 	* except.h: Remove forward def of tree_node, rtx_def and
