--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-31  Richard Henderson  <rth@redhat.com>
 
+	* config/ia64/ia64.c (mark_reg_gr_used_mask): Mind HARD_REGNO_NREGS.
+
+2001-12-31  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (build_def_use): Don't rename asm operands that
 	were originally hard registers. 
 	(copyprop_hardreg_forward_1): Likewise.
