* configure.in (uintptr_t): Use AC_CHECK_TYPE. 	* configure: Regenerated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48442 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -3,6 +3,11 @@
 	* aclocal.m4 (libiberty_AC_FUNC_STRNCMP): Use anon mmap as 2nd try.
 	* configure: Regenerated.
 
+2001-12-24  Douglas B. Rupp  <rupp@gnat.com>
+
+	* configure.in (uintptr_t): Use AC_CHECK_TYPE.
+	* configure: Regenerated.
+
 2001-12-12  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR other/2719
