--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-01  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.dg/mmix-1.c: New test.
+
 2001-12-31  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/asm-5.c: New.
