2001-12-29 Andreas Tobler <a.tobler@schweiz.ch>
	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
	Darwin.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48455 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-29 Andreas Tobler <a.tobler@schweiz.ch>
+
+	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
+	Darwin.
+
 2001-12-21  Tom Tromey  <tromey@redhat.com>
 
 	* java/io/ObjectInputStream.java (enableResolveObject): Use
