* warn_summary: Add -ada subdirectory flag.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48457 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* warn_summary: Add -ada subdirectory flag.
+
 2001-12-12  Matthias Klose  <doko@debian.org>
 
 	* texi2pod.pl: Merge changes from binutils' texi2pod.pl. Allows
