--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/5116, c++/764
+	* call.c (build_new_op): Make sure template class operands are
+	instantiated. Simplify arglist construction.
+
 2001-12-29  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* call.c (build_user_type_conversion_1): Use my_friendly_assert
