--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/template/friend2.C: New test.
+
 2002-01-01  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.dg/mmix-1.c: New test.
