--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/ctor1.C: New test.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.dg/template/friend2.C: New test.
 
 2002-01-01  Hans-Peter Nilsson  <hp@bitrange.com>
