cp: 	PR c++/4379 	* typeck.c (build_x_unary_op): Don't destroy the OFFSET_REF on a 	single non-static member. 	(unary_complex_lvalue): If it cannot be a pointer to member, don't 	make it so. Check it is not pointer to reference. testsuite: 	* g++.dg/other/ptrmem1.C: New test. 	* g++.dg/other/ptrmem2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48465 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/other/ptrmem1.C: New test.
+	* g++.dg/other/ptrmem2.C: New test.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.dg/template/ctor1.C: New test.
 
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
