--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,13 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/4379
+	* typeck.c (build_x_unary_op): Don't destroy the OFFSET_REF on a
+	single non-static member.
+	(unary_complex_lvalue): If it cannot be a pointer to member, don't
+	make it so. Check it is not pointer to reference.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/5132
 	* decl2.c (reparse_absdcl_as_casts): Don't digest_init if we
 	are processing a template decl.
