--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,22 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/775
+	* cp-tree.h (handle_class_head): Adjust prototype.
+	* decl2.c (handle_class_head): Add DEFN_P and NEW_TYPE_P
+	parameters. Use for all class heads.
+	* parse.y (named_class_head_sans_basetype, named_class_head,
+	named_complex_class_head_sans_basetype,
+	named_class_head_sans_basetype_defn,
+	unnamed_class_head): Remove.
+	(class_head, class_head_apparent_template): Recognize class heads
+	(class_head_decl, class_head_defn): New reductions. Process class
+	heads.
+	(structsp): Adjust class definition and class declaration
+	reductions.
+	(maybe_base_class_list): Give diagnostic on empty list.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/4379
 	* typeck.c (build_x_unary_op): Don't destroy the OFFSET_REF on a
 	single non-static member.
