--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/friend2.C: New test.
+	* g++.old-deja/g++/brendan/crash8.C: Adjust location of error.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.dg/other/ptrmem1.C: New test.
 	* g++.dg/other/ptrmem2.C: New test.
 
