--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,12 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/5123
+	* typeck.c (build_component_ref): Cope with a TEMPLATE_ID_EXPR.
+	(build_x_function_call): Cope with a COMPONENT_REF containing a
+	TEMPLATE_ID_EXPR.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/5213
 	* pt.c (convert_template_argument): Be more careful determining
 	when RECORD_TYPE templates are or are not templates.
