--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/ntp.C: New test.
+
 	* g++.dg/other/component1.C: New test.
 
 	* g++.dg/template/ttp3.C: New test.
